Changelog
=========

4.0.5 (unreleased)
------------------

- Nothing changed yet.


4.0.4 (2019-12-17)
------------------

- Install plone.restapi when installing product.
  [cekk]
- Fix dates in search view (#20711).
  [cekk]

4.0.3 (2019-12-05)
------------------

- Fix translations
  [cekk]

4.0.2 (2019-12-05)
------------------

- Revert last tag.
  [cekk]
- Fix tile bando title padding
  [nzambello]

4.0.1 (2019-11-28)
------------------

- Fix search view url.
  [cekk]

4.0.0 (2019-11-28)
------------------

- Python 3 compatibility.
  [cekk]
- New bandi search view
  [cekk][nzambello]
- Change bando fields: dropped `ente_bando`, add `materie` and `finanziatori`.
  [cekk]
- Bando categorization fields vocabularies have now a pre-defined static list of values.
  [cekk]

3.0.15 (2019-02-11)
-------------------

- Add IShortName behavior fo Folder Deepening.
  [cekk]


3.0.14 (2019-01-30)
-------------------

- Added translations for bando status [nzambello]


3.0.13 (2019-01-28)
-------------------

- Added bando status info in item view [nzambello]
- Fixed responsive layout [nzambello]


3.0.12 (2018-12-05)
-------------------

- Fix querystring generation for rss search view.
  [cekk]

3.0.11 (2018-12-05)
-------------------

- Removed plone.directives import.
  [daniele]

3.0.10 (2018-11-20)
-------------------

- Remove unused translations.
  [cekk]

3.0.9 (2018-11-20)
------------------

- Fix translations.
  [cekk]

3.0.8 (2018-02-26)
------------------

- Fix css styles and templates for titles [nzambello]


3.0.7 (2018-02-07)
------------------

- Fix css styles and templates [nzambello]


3.0.6 (2018-02-02)
------------------

- Fix css styles [nzambello]


3.0.5 (2018-02-02)
------------------
- Added ISelectableConstrainTypes behavior
  [daniele]
- Fix scadenza dates in views and tiles
  [cekk]
- Add menuitems entries
  [cekk]
- Fix collection view names
  [cekk]
- Fix templates and styles [nzambello]


3.0.4 (2018-01-29)
------------------
