@@ -143,17 +143,17 @@ h2.bandoTitle,
 .bandoTitle .state-open,
 .bandoInfos .state-open {
   background-image: url(++plone++rer.bandi.images/bando_open.png);
-  color: #255a01;
+  color: #222;
 }
 .bandoTitle .state-inProgress,
 .bandoInfos .state-inProgress {
   background-image: url(++plone++rer.bandi.images/bando_inprogress.png);
-  color: #9c6f02;
+  color: #222;
 }
 .bandoTitle .state-closed,
 .bandoInfos .state-closed {
   background-image: url(++plone++rer.bandi.images/bando_closed.png);
-  color: #700;
+  color: #222;
 }
 
 .bandi-collection .bando-item {
