@@ -1,308 +1,308 @@
 body#visual-portal-wrapper {
-    &.pat-plone {
-        #edit-bar {
-            #edit-zone {
-                .contenttype-bando:after {
-                    content: '';
-                    background-image: url('/++plone++rer.bandi.images/bando_icon.svg');
-                    background-position: center;
-                    background-repeat: no-repeat;
-                    background-size: 1em;
-                }
-            }
+  &.pat-plone {
+    #edit-bar {
+      #edit-zone {
+        .contenttype-bando:after {
+          content: '';
+          background-image: url('/++plone++rer.bandi.images/bando_icon.svg');
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: 1em;
         }
+      }
     }
+  }
 }
 
 .visualClear {
-    clear: both;
+  clear: both;
 }
 
 .rer-contextual-portlets-right {
-    width: 17em;
-    margin-left: 1em;
-    float: right;
+  width: 17em;
+  margin-left: 1em;
+  float: right;
 }
 
 body.portaltype-bando {
-    #content {
-        .rer-contextual-text,
-        .rer-contextual-portlets {
-            a {
-                background: none;
-                padding: 1px 0 1px 1px;
-                text-decoration: underline;
-            }
+  #content {
+    .rer-contextual-text,
+    .rer-contextual-portlets {
+      a {
+        background: none;
+        padding: 1px 0 1px 1px;
+        text-decoration: underline;
+      }
 
-            .bandoInfos {
-                padding: 0;
-            }
-        }
+      .bandoInfos {
+        padding: 0;
+      }
     }
+  }
 }
 
 .rer-contextual-description {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .contextualbody .navTreeItem li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .rer-contextual-portlets ul {
-    margin: 0.5em 0 0 0.5em;
+  margin: 0.5em 0 0 0.5em;
 }
 
 .contextualbody {
-    .navTreeItem {
-        &,
-        dd.portletItem & {
-            a {
-                display: inline;
-            }
-        }
+  .navTreeItem {
+    &,
+    dd.portletItem & {
+      a {
+        display: inline;
+      }
     }
+  }
 }
 
 .tableRight {
-    width: 100%;
+  width: 100%;
 }
 
 .bandiColumnRight {
-    width: 40%;
-    float: right;
-    margin-left: 1em;
+  width: 40%;
+  float: right;
+  margin-left: 1em;
 
-    @media (max-width: 768px) {
-        width: auto;
-        float: none;
-        margin: 1rem 0 3rem;
-    }
+  @media (max-width: 768px) {
+    width: auto;
+    float: none;
+    margin: 1rem 0 3rem;
+  }
 }
 
 /*** etichette bandi ***/
 
 .bandoInfos,
 .bandoTitle {
-    .bandoStateClass {
-        background-position: 5px 0;
-        background-repeat: no-repeat;
-        display: block;
-        float: left;
-        font-size: 0.8em;
-        font-weight: normal;
-        margin-right: 1em;
-        padding-top: 5px;
-        text-transform: uppercase;
-        width: 57px;
-        min-width: 57px;
-        text-align: center;
-    }
+  .bandoStateClass {
+    background-position: 5px 0;
+    background-repeat: no-repeat;
+    display: block;
+    float: left;
+    font-size: 0.8em;
+    font-weight: normal;
+    margin-right: 1em;
+    padding-top: 5px;
+    text-transform: uppercase;
+    width: 57px;
+    min-width: 57px;
+    text-align: center;
+  }
 
-    table & {
-        .bandoStateClass {
-            width: auto;
-            text-align: center;
-        }
+  table & {
+    .bandoStateClass {
+      width: auto;
+      text-align: center;
     }
+  }
 }
 
 a.bandoTitle {
-    border-bottom: 1px solid #cccccc;
-    text-decoration: none;
+  border-bottom: 1px solid #cccccc;
+  text-decoration: none;
 }
 
 a.bandoTitleLink {
-    border-bottom: 1px solid;
+  border-bottom: 1px solid;
 }
 
 .bandoStateClass {
-    .bandoInfos & {
-        margin-top: 4px;
-    }
+  .bandoInfos & {
+    margin-top: 4px;
+  }
 
-    .bandoTitle & {
-        font-size: 70%;
-        margin-bottom: 0;
-        margin-top: 7px;
-        text-align: center;
+  .bandoTitle & {
+    font-size: 70%;
+    margin-bottom: 0;
+    margin-top: 7px;
+    text-align: center;
 
-        .searchResults & {
-            margin-top: 3px;
-        }
+    .searchResults & {
+      margin-top: 3px;
     }
+  }
 }
 
 h3.bandoTitle {
-    margin-top: 0;
-    padding: 0 0 0 70px;
+  margin-top: 0;
+  padding: 0 0 0 70px;
 }
 
 h2.bandoTitle,
 .bandoInfos {
-    padding: 15px 0;
+  padding: 15px 0;
 }
 
 .tileContent {
-    .bandoInfos {
-        padding-left: 75px;
-    }
+  .bandoInfos {
+    padding-left: 75px;
+  }
 }
 
 .bandoTitle,
 .bandoInfos {
-    position: relative;
+  position: relative;
 
-    .tileContent & {
-        .bandoStateClass {
-            position: absolute;
-            top: 2em;
-            left: 0;
-        }
+  .tileContent & {
+    .bandoStateClass {
+      position: absolute;
+      top: 2em;
+      left: 0;
     }
+  }
 
-    .searchResults & {
-        .bandoStateClass {
-            float: left;
-        }
+  .searchResults & {
+    .bandoStateClass {
+      float: left;
     }
+  }
 
-    .state-open,
-    .state-inProgress,
-    .state-closed {
-        // float: none;
-        padding: 10px 0 5px;
-        // color: #666;
-        // font-weight: 600;
-        // border-top: 5px solid;
-    }
+  .state-open,
+  .state-inProgress,
+  .state-closed {
+    // float: none;
+    padding: 10px 0 5px;
+    // color: #666;
+    // font-weight: 600;
+    // border-top: 5px solid;
+  }
 
-    .state-open {
-        background-image: url(++plone++rer.bandi.images/bando_open.png);
-        color: #255a01;
-        // border-color: #27af0f;
-    }
+  .state-open {
+    background-image: url(++plone++rer.bandi.images/bando_open.png);
+    // color: #255a01;
+    color: #222;
+  }
 
-    .state-inProgress {
-        background-image: url(++plone++rer.bandi.images/bando_inprogress.png);
-        color: #9c6f02;
-        // border-color: #e5c001;
-    }
+  .state-inProgress {
+    background-image: url(++plone++rer.bandi.images/bando_inprogress.png);
+    // color: #9c6f02;
+    color: #222;
+  }
 
-    .state-closed {
-        background-image: url(++plone++rer.bandi.images/bando_closed.png);
-        color: #700;
-        // border-color: #c00;
-    }
+  .state-closed {
+    background-image: url(++plone++rer.bandi.images/bando_closed.png);
+    color: #222;
+    // color: #700;
+  }
 }
 
 .bandi-collection {
-    .bando-item {
-        position: relative;
+  .bando-item {
+    position: relative;
 
-        h2.bandoTitle {
-            font-size: 120%;
-            font-weight: normal;
-            margin: 2em 0 0;
-            display: inline-flex;
+    h2.bandoTitle {
+      font-size: 120%;
+      font-weight: normal;
+      margin: 2em 0 0;
+      display: inline-flex;
 
-            a {
-                border: 0;
-                margin-left: 70px;
+      a {
+        border: 0;
+        margin-left: 70px;
 
-                span {
-                    border-bottom: 1px solid;
-                }
-            }
-
-            .bandoStateClass {
-                position: absolute;
-                top: 15px;
-                left: 0;
-            }
+        span {
+          border-bottom: 1px solid;
         }
+      }
+
+      .bandoStateClass {
+        position: absolute;
+        top: 15px;
+        left: 0;
+      }
     }
+  }
 }
 
 .bandoDetail {
-    clear: both;
+  clear: both;
 }
 
 .bandoDetail,
 .searchResults .bandoDetail {
-    margin: 0 0 0 70px;
-    clear: none;
+  margin: 0 0 0 70px;
+  clear: none;
 }
 
 .bandoItem {
-    border-bottom: 1px dashed #ccc;
-    padding: 0.5em 0 0.7em;
-    margin: 0.5em 0;
+  border-bottom: 1px dashed #ccc;
+  padding: 0.5em 0 0.7em;
+  margin: 0.5em 0;
 }
 
 .labelTB {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .bandoDates {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 
-    .colspacer {
-        padding: 0 10px;
-    }
+  .colspacer {
+    padding: 0 10px;
+  }
 }
 
 p.bandoType {
-    color: #666;
-    font-size: 0.9em;
-    font-style: italic;
-    margin: 0;
+  color: #666;
+  font-size: 0.9em;
+  font-style: italic;
+  margin: 0;
 }
 
 .siteSelection {
-    margin-left: 2em;
-    margin-top: 1em;
+  margin-left: 2em;
+  margin-top: 1em;
 }
 
 .collectionTile.no-description {
-    .bandoDescription {
-        display: none;
-    }
+  .bandoDescription {
+    display: none;
+  }
 }
 
 .solr-search-actions {
-    > p {
-        margin-top: 15px;
-        margin-bottom: 0;
-    }
+  > p {
+    margin-top: 15px;
+    margin-bottom: 0;
+  }
 }
 
 .solr-search-actions,
 .solr-search-results {
-    a {
-        border-bottom: 1px solid;
-    }
+  a {
+    border-bottom: 1px solid;
+  }
 }
 
 .bandi-collection {
-    .tile-wrapper {
-        padding: 20px 0;
-        position: relative;
-    }
+  .tile-wrapper {
+    padding: 20px 0;
+    position: relative;
+  }
 
-    .showMore {
-        position: absolute;
-        top: 20px;
-        right: 0;
-        padding: 10px 0;
-    }
+  .showMore {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    padding: 10px 0;
+  }
 
-    .showMore a {
-        border-bottom: 1px solid;
-    }
+  .showMore a {
+    border-bottom: 1px solid;
+  }
 
-    ul.tileContent {
-        padding-left: 0;
-    }
+  ul.tileContent {
+    padding-left: 0;
+  }
 }
